services/ball/Deployment-crap.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: ball
    version: crap
  name: ball-crap
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ball
      version: crap
  template:
    metadata:
      labels:
        app: ball
        version: crap
    spec:
      containers:
      - image: jotak/demo-mesh-arena-ball:latest
        imagePullPolicy: IfNotPresent
        name: ball
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
