services/ball/Deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: ball
    version: v1
  name: ball
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ball
      version: v1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9090"
        kiali.io/dashboards: vertx
      labels:
        app: ball
        version: v1
    spec:
      containers:
      - image: jotak/demo-mesh-arena-ball:1.1
        imagePullPolicy: IfNotPresent
        name: ball
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        securityContext:
          privileged: false
        readinessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
        livenessProbe:
          exec:
            command:
            - curl
            - localhost:8080/health
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 1
