services/ball/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: ball
  labels:
    project: mesh-arena
    app: ball
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: ball
