services/ball/destrule-cb.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ball-dr
  labels:
    project: mesh-arena
spec:
  host: ball
  subsets:
  - name: ball-v1
    labels:
      version: v1
  - name: ball-v2
    labels:
      version: v2
# Scenario 3: With outlier detection
  trafficPolicy:
    connectionPool:
      tcp:
        maxConnections: 1
      http:
        http1MaxPendingRequests: 1
        maxRequestsPerConnection: 1
