services/ball/destrule-outlier.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ball-dr
  labels:
    project: mesh-arena
spec:
  host: ball
  subsets:
  - name: ball-v1
    labels:
      version: v1
  - name: ball-v2
    labels:
      version: v2
# Scenario 3: With outlier detection
  trafficPolicy:
    outlierDetection:
      consecutiveErrors: 1
      baseEjectionTime: 10s
      maxEjectionPercent: 50
