services/ball/virtualservice-50-50.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ball-vs
  labels:
    project: mesh-arena
spec:
  hosts:
  - ball
  http:
  - route:
    - destination:
        host: ball
        subset: ball-v1
      weight: 50
    - destination:
        host: ball
        subset: ball-v2
      weight: 50
