services/ball/virtualservice-all-to-v1.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ball-vs
spec:
  hosts:
  - ball
  http:
  - route:
    - destination:
        host: ball
        subset: ball-v1
