services/ball/virtualservice-om-psg.yml
# Scenario delay
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ball-vs
spec:
  hosts:
  - ball
  http:
  - match:
    - sourceLabels:
        version: psg
    fault:
      delay:
        percent: 100
        fixedDelay: 2s
    route:
    - destination:
        host: ball
        subset: ball-v2
